--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@portabletext/react": "^3.2.1",
+    "@sanity/client": "^6.28.4",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@testing-library/jest-dom": "^5.17.0",
