--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mdx-js/rollup": "^3.1.1",
     "@portabletext/react": "^3.2.1",
     "@sanity/client": "^6.28.4",
     "@supabase/supabase-js": "^2.49.1",
@@ -10,8 +11,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "buffer": "^6.0.3",
+    "gray-matter": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5",
@@ -46,6 +50,7 @@
   },
   "devDependencies": {
     "gh-pages": "^6.2.0",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "vite-plugin-raw": "^1.0.3"
   }
 }
