--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "buffer": "^6.0.3",
     "dotenv": "^17.2.3",
     "gray-matter": "^4.0.3",
+    "motion": "^12.23.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
